--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
 html {
-  background-color: #79756f,
+  box-sizing: border-box;
+  background-color: #79756f;
+  line-height: 1.5
+  font-family: 'Bevan', cursive;
 }
