--- a/css/main.css
+++ b/css/main.css
@@ -2,5 +2,9 @@ html {
   box-sizing: border-box;
   background-color: #79756f;
   line-height: 1.5
-  font-family: 'Bevan', cursive;
+  font-family: "Bevan", cursive;
+}
+
+.planets {
+
 }
