--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #79756f;
-  line-height: 1.5
+  line-height: 1.5;
   font-family: "Bevan", cursive;
 }
 
