--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,11 @@ h1 {
   text-align: center;
   margin: 0;
 }
+
+.nav {
+  margin: auto;
+  padding: 0;
+  list-style-type: none;
+  line-height: 1.5;
+  font-family: sans-serif;
+}
