--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,12 @@ h1 {
   line-height: 1.5;
   font-family: sans-serif;
 }
+
+nav a{
+  display: inline-block;
+  padding: .6em;
+  background-color: #713837;
+  text-decoration: none;
+  border-radius: 5px;
+  color: #fff;
+}
