--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
 }
 
 h1 {
-  font-family: "Bevian", serif;
+  font-family: "Bevan", serif;
   color: #fff
   text-align: center;
   margin: 0;
@@ -37,4 +37,39 @@ nav a{
   text-decoration: none;
   border-radius: 5px;
   color: #fff;
+}
+
+nav a:hover {
+  background-color: #f33;
+  color: #fff;
+}
+
+ul{
+  text-align: center;
+  list-style-type: none;
+}
+
+body {
+  margin: 0;
+  background-color: #79756f;
+}
+
+header {
+  background-color: #79756f;
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  background-color: #79756f;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0.3em;
 }
