--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
 }
 
 h1 {
-  font-family: 'Bevan', serif;
+  font-family: Bevan , serif;
   color: #fff;
   text-align: center;
   margin: 0;
